fixed spacing

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -41,6 +41,7 @@ body{
   font-family:  'Orbitron', sans-serif;
   text-align: center;
   height: 400px;
+  margin-top: 230px;
 }
 .main-header h1{
   font-size: 4rem;
